--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Bruges (Belgium) -- Fiction'
 - !lcc 'PQ'
 - !lcsh 'Widowers -- Fiction'
+- GITenberg
 title: Bruges-la-morte
 url: http://www.gutenberg.org/ebooks/14911
